--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/SterlynKong/note-taker#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "uuidv1": "^1.6.14"
   }
 }
